--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
+        <activity
+            android:name=".dynamicallyaddingitemusingadapter.DynamicallyAddingUsingAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".customgridview.CustomGridViewExample"
+            android:exported="false" />
         <activity
             android:name=".customlistviewbaseadapter.CustomListViewBaseAdapterExample"
             android:exported="false" />
