--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".recyclerview.RecyclerViewExample"
+            android:exported="false" />
+        <activity
+            android:name=".dynamicallyaddingitemusingadapter.DynamicallyAddingGridElement"
+            android:exported="false" />
+        <activity
             android:name=".dynamicallyaddingitemusingadapter.DynamicallyAddingUsingAdapter"
             android:exported="false" />
         <activity
