--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".recyclerview.DynamicRecyclerView"
+            android:exported="false" />
+        <activity
             android:name=".recyclerview.RecyclerViewExample"
             android:exported="false" />
         <activity
