--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".touchlandingpage.TouchLandingPage"
+            android:exported="false" />
+        <activity
+            android:name=".lputouchlanding.LpuTouchLandingPage"
+            android:exported="false" />
+        <activity
             android:name=".recyclerview.DynamicRecyclerView"
             android:exported="false" />
         <activity
