--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".shoppinglandingpage.ShoppingPage"
+            android:exported="false" />
+        <activity
             android:name=".touchlandingpage.TouchLandingPage"
             android:exported="false" />
         <activity
