--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -20,10 +21,13 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
-            android:name=".learningforegroundservices.ForegroundServicesMain"
+            android:name=".backgroundprocesses.broadcastreceiver.AirplaneModeReceiverMain"
             android:exported="false" />
         <activity
-            android:name=".learningcoroutines.CoroutinesExamples"
+            android:name=".backgroundprocesses.learningforegroundservices.ForegroundServicesMain"
+            android:exported="false" />
+        <activity
+            android:name=".backgroundprocesses.learningcoroutines.CoroutinesExamples"
             android:exported="false" />
         <activity
             android:name=".learningadapter.touchlandingpage.TouchLandingPage"
@@ -63,8 +67,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".learningforegroundservices.ForegroundService"
-            android:foregroundServiceType="shortService"/>
+
+        <service
+            android:name=".backgroundprocesses.learningforegroundservices.ForegroundService"
+            android:foregroundServiceType="shortService" />
     </application>
 
 </manifest>
