--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,13 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
-            android:name=".backgroundprocesses.broadcastreceiver.AirplaneModeReceiverMain"
+            android:name=".staractivity.ImageCoroutine"
+            android:exported="false" />
+        <activity
+            android:name=".staractivity.StarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".backgroundprocesses.broadcastreceiver.ModeReceiverMain"
             android:exported="false" />
         <activity
             android:name=".backgroundprocesses.learningforegroundservices.ForegroundServicesMain"
