--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".storageoptions.sqllitedatabase.SQLiteMain"
+            android:exported="false" />
+        <activity
             android:name=".staractivity.ImageCoroutine"
             android:exported="false" />
         <activity
