--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
     <application
@@ -22,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
+        <activity
+            android:name=".storageoptions.roomdatabase.RoomDatabaseMain"
+            android:exported="false" />
         <activity
             android:name=".storageoptions.sqllitedatabase.SQLiteMain"
             android:exported="false" />
