--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".locationandmaps.locationapi.LocationAPIMain"
+            android:exported="false" />
+        <activity
+            android:name=".backgroundprocesses.boundservices.BoundServiceMain"
+            android:exported="false" />
+        <activity
+            android:name=".locationandmaps.currentlocation.CurrentLocationMain"
+            android:exported="false" />
+        <activity
             android:name=".storageoptions.roomdatabase.RoomDatabaseMain"
             android:exported="false" />
         <activity
@@ -86,6 +95,10 @@
         <service
             android:name=".backgroundprocesses.learningforegroundservices.ForegroundService"
             android:foregroundServiceType="shortService" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/api_key" />
     </application>
 
 </manifest>
