--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         android:theme="@style/Theme.Learning226"
         tools:targetApi="31">
         <activity
+            android:name=".EspressoTestingActivity"
+            android:exported="false" >
+        </activity>
+        <activity
             android:name=".locationandmaps.locationapi.LocationAPIMain"
             android:exported="false" />
         <activity
